Fix excess top margin on mobile

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -164,4 +164,11 @@
       width: 22em;
     }
   }
+
+.post-content {
+  margin-bottom: $spacing-unit;
+
+  h1, h2, h3, h4, h5, h6 {
+    margin-top: 1em;
+  }
 }
